# IF704-ChatBot

./: .gitignore  README.md  credentials.json  pyproject.toml
dataset_generation/: good_model_single_translate.txt  sentences.csv  translate_generation.py
notebooks/: translate_intetions.ipynb
notebooks/.ipynb_checkpoints/: translate_intetions-checkpoint.ipynb
notebooks/kaggle/: kaggle.json
src/: credentials.yml  domain.yml  graph.html
src/actions/: action_translate.py  google_translate.py  utils.py
src/data/: nlu.yml  rules.yml  stories.yml
src/results/: DIETClassifier_report.json  intent_errors.json  intent_report.json  response_selection_report.json  story_report.json
src/tests/: test_stories.yml
