[tool.poetry]
name = "if704-chatbot"
version = "0.1.0"
description = ""
authors = ["b0rba <borbalves.matheus@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
rasa = "^2.8.12"
google-cloud-translate = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
